Primera entrega/y.output
Terminals unused in grammar

   LETRA
   DIGITO
   PYC
   ASIG
   IMPR
   LEER
   CONSCAD
   CONSENT
   CONSREAL
   CONSHEXA
   CONSBIN
   SUMA
   MENOS
   DIV
   MULT
   WHILE
   SI
   SINO
   PARA
   PARC
   LLAVA
   LLAVC
   DIST
   MENIG
   MAYIG
   NO_IG
   IG
   Y
   O


Gramática

    0 $accept: declaracion $end

    1 declaracion: DECVAR CORCA variables CORCC DEFTIPO CORCA tipos CORCC

    2 variables: variables COMA ID
    3          | ID

    4 tipos: tipos COMA INTEGER
    5      | tipos COMA FLOAT
    6      | INTEGER
    7      | FLOAT


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
LETRA (258)
DIGITO (259)
ID (260) 2 3
COMA (261) 2 4 5
PYC (262)
ASIG (263)
DECVAR (264) 1
DEFTIPO (265) 1
IMPR (266)
LEER (267)
INTEGER (268) 4 6
FLOAT (269) 5 7
CONSCAD (270)
CONSENT (271)
CONSREAL (272)
CONSHEXA (273)
CONSBIN (274)
SUMA (275)
MENOS (276)
DIV (277)
MULT (278)
WHILE (279)
SI (280)
SINO (281)
PARA (282)
PARC (283)
LLAVA (284)
LLAVC (285)
CORCA (286) 1
CORCC (287) 1
DIST (288)
MENIG (289)
MAYIG (290)
NO_IG (291)
IG (292)
Y (293)
O (294)


No terminales con las reglas donde aparecen

$accept (40)
    en la izquierda: 0
declaracion (41)
    en la izquierda: 1, en la derecha: 0
variables (42)
    en la izquierda: 2 3, en la derecha: 1 2
tipos (43)
    en la izquierda: 4 5 6 7, en la derecha: 1 4 5


estado 0

    0 $accept: . declaracion $end

    DECVAR  desplazar e ir al estado 1

    declaracion  ir al estado 2


estado 1

    1 declaracion: DECVAR . CORCA variables CORCC DEFTIPO CORCA tipos CORCC

    CORCA  desplazar e ir al estado 3


estado 2

    0 $accept: declaracion . $end

    $end  desplazar e ir al estado 4


estado 3

    1 declaracion: DECVAR CORCA . variables CORCC DEFTIPO CORCA tipos CORCC

    ID  desplazar e ir al estado 5

    variables  ir al estado 6


estado 4

    0 $accept: declaracion $end .

    $default  aceptar


estado 5

    3 variables: ID .

    $default  reduce usando la regla 3 (variables)


estado 6

    1 declaracion: DECVAR CORCA variables . CORCC DEFTIPO CORCA tipos CORCC
    2 variables: variables . COMA ID

    COMA   desplazar e ir al estado 7
    CORCC  desplazar e ir al estado 8


estado 7

    2 variables: variables COMA . ID

    ID  desplazar e ir al estado 9


estado 8

    1 declaracion: DECVAR CORCA variables CORCC . DEFTIPO CORCA tipos CORCC

    DEFTIPO  desplazar e ir al estado 10


estado 9

    2 variables: variables COMA ID .

    $default  reduce usando la regla 2 (variables)


estado 10

    1 declaracion: DECVAR CORCA variables CORCC DEFTIPO . CORCA tipos CORCC

    CORCA  desplazar e ir al estado 11


estado 11

    1 declaracion: DECVAR CORCA variables CORCC DEFTIPO CORCA . tipos CORCC

    INTEGER  desplazar e ir al estado 12
    FLOAT    desplazar e ir al estado 13

    tipos  ir al estado 14


estado 12

    6 tipos: INTEGER .

    $default  reduce usando la regla 6 (tipos)


estado 13

    7 tipos: FLOAT .

    $default  reduce usando la regla 7 (tipos)


estado 14

    1 declaracion: DECVAR CORCA variables CORCC DEFTIPO CORCA tipos . CORCC
    4 tipos: tipos . COMA INTEGER
    5      | tipos . COMA FLOAT

    COMA   desplazar e ir al estado 15
    CORCC  desplazar e ir al estado 16


estado 15

    4 tipos: tipos COMA . INTEGER
    5      | tipos COMA . FLOAT

    INTEGER  desplazar e ir al estado 17
    FLOAT    desplazar e ir al estado 18


estado 16

    1 declaracion: DECVAR CORCA variables CORCC DEFTIPO CORCA tipos CORCC .

    $default  reduce usando la regla 1 (declaracion)


estado 17

    4 tipos: tipos COMA INTEGER .

    $default  reduce usando la regla 4 (tipos)


estado 18

    5 tipos: tipos COMA FLOAT .

    $default  reduce usando la regla 5 (tipos)
